# MooreCoinService

./: .gitattributes  .gitignore  .travis.yml  LICENSE  SConstruct  package.json
src/: .clang-format  (+2 more)
src/hyperleveldb/: .gitignore  AUTHORS  Makefile.am  NEWS  README  benchmark.cc  configure.ac  hyperleveldb.upack.in  libhyperleveldb.pc.in
src/hyperleveldb/db/: autocompact_test.cc  builder.cc  builder.h  c.cc  c_test.c  corruption_test.cc  db_bench.cc  db_impl.cc  db_impl.h  db_iter.cc  db_iter.h  db_test.cc  dbformat.cc  dbformat.h  dbformat_test.cc  filename.cc  filename.h  filename_test.cc  leveldb_main.cc  log_format.h  log_reader.cc  log_reader.h  log_test.cc  log_writer.cc  log_writer.h  memtable.cc  memtable.h  repair.cc  replay_iterator.cc  replay_iterator.h  skiplist.h  skiplist_test.cc  snapshot.h  table_cache.cc  table_cache.h  version_edit.cc  version_edit.h  version_edit_test.cc  version_set.cc  version_set.h  (+4 more)
src/hyperleveldb/doc/: benchmark.html  impl.html  log_format.txt  table_format.txt
src/hyperleveldb/doc/bench/: db_bench_sqlite3.cc  db_bench_tree_db.cc
src/hyperleveldb/helpers/memenv/: memenv.cc  memenv.h  memenv_test.cc
src/hyperleveldb/hyperleveldb/: c.h  cache.h  comparator.h  db.h  env.h  filter_policy.h  iterator.h  options.h  replay_iterator.h  slice.h  status.h  table.h  table_builder.h  write_batch.h
src/hyperleveldb/issues/: issue178_test.cc  issue200_test.cc
src/hyperleveldb/port/: atomic_pointer.h  port.h  port_example.h  port_posix.cc  port_posix.h  thread_annotations.h
src/hyperleveldb/port/win/: stdint.h
src/hyperleveldb/table/: block.cc  block.h  block_builder.cc  block_builder.h  filter_block.cc  filter_block.h  filter_block_test.cc  format.cc  format.h  iterator.cc  iterator_wrapper.h  merger.cc  merger.h  table.cc  table_builder.cc  table_test.cc  two_level_iterator.cc  two_level_iterator.h
src/hyperleveldb/util/: arena.cc  arena.h  arena_test.cc  bloom.cc  bloom_test.cc  cache.cc  cache_test.cc  coding.cc  coding.h  coding_test.cc  comparator.cc  crc32c.cc  crc32c.h  crc32c_test.cc  env.cc  env_posix.cc  env_test.cc  filter_policy.cc  hash.cc  hash.h  histogram.cc  histogram.h  logging.cc  logging.h  mutexlock.h  options.cc  posix_logger.h  random.h  status.cc  testharness.cc  testharness.h  testutil.cc  testutil.h
src/lz4/cmake_unofficial/: CMakeLists.txt
src/protobuf/: CHANGES.txt  CONTRIBUTORS.txt  COPYING.txt  INSTALL.txt  Makefile.am  README.txt  autogen.sh  configure.ac  generate_descriptor_proto.sh  post_process_dist.sh  protobuf-lite.pc.in  protobuf.pc.in
src/protobuf/benchmarks/: ProtoBench.java  google_size.proto  google_speed.proto  readme.txt
src/protobuf/editors/: README.txt  proto.vim  protobuf-mode.el
src/protobuf/examples/: AddPerson.java  ListPeople.java  Makefile  README.txt  add_person.cc  add_person.py  addressbook.proto  list_people.cc  list_people.py
src/protobuf/java/: README.txt  pom.xml
src/protobuf/m4/: ac_system_extensions.m4  acx_check_suncc.m4  acx_pthread.m4  stl_hash.m4
src/protobuf/more_tests/: Makefile
src/protobuf/python/: README.txt  ez_setup.py  mox.py  setup.py  stubout.py
src/protobuf/src/: Makefile.am
src/protobuf/src/solaris/: libstdc++.la
src/protobuf/vsprojects/: config.h  convert2008to2005.sh  libprotobuf-lite.vcproj  libprotobuf.vcproj  libprotoc.vcproj  lite-test.vcproj  protobuf.sln  protoc.vcproj  readme.txt  test_plugin.vcproj  tests.vcproj
src/snappy/snappy/: COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  format_description.txt  framing_format.txt  snappy-c.cc  snappy-c.h  snappy-internal.h  snappy-sinksource.cc  snappy-sinksource.h  snappy-stubs-internal.cc  snappy-stubs-internal.h  snappy-stubs-public.h.in  snappy-test.cc  snappy-test.h  snappy.cc  snappy.h  snappy_unittest.cc
src/snappy/snappy/m4/: gtest.m4
src/snappy/snappy/testdata/: alice29.txt  asyoulik.txt  baddata1.snappy  baddata2.snappy  baddata3.snappy  geo.protodata  html  html_x_4  kppkn.gtb  lcet10.txt.bak  plrabn12.txt  urls.10K
src/websocketpp/: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Doxyfile  SConstruct  changelog.md  readme.md  roadmap.md  websocketpp-config.cmake.in  websocketpp-configVersion.cmake.in
src/websocketpp/examples/: CMakeLists.txt
src/websocketpp/examples/associative_storage/: associative_storage.cpp
src/websocketpp/examples/broadcast_server/: SConscript  broadcast_server.cpp
src/websocketpp/examples/debug_client/: SConscript  debug_client.cpp
src/websocketpp/examples/debug_server/: CMakeLists.txt  SConscript  debug_server.cpp
src/websocketpp/examples/dev/: SConscript  main.cpp
src/websocketpp/examples/echo_server/: CMakeLists.txt  SConscript  echo_handler.hpp  echo_server.cpp
src/websocketpp/examples/echo_server_both/: CMakeLists.txt  SConscript  echo_server_both.cpp
src/websocketpp/examples/echo_server_tls/: CMakeLists.txt  SConscript  echo_server_tls.cpp  server.pem
src/websocketpp/examples/enriched_storage/: enriched_storage.cpp
src/websocketpp/examples/handler_switch/: handler_switch.cpp
src/websocketpp/examples/iostream_server/: SConscript  iostream_server.cpp
src/websocketpp/examples/print_server/: CMakeLists.txt  SConscript
src/websocketpp/examples/sip_client/: CMakeLists.txt  README.txt  SConscript  sip_client.cpp
src/websocketpp/examples/subprotocol_server/: SConscript  subprotocol_server.cpp
src/websocketpp/examples/telemetry_client/: CMakeLists.txt  SConscript  telemetry_client.cpp
src/websocketpp/examples/testee_client/: CMakeLists.txt  SConscript  testee_client.cpp
src/websocketpp/examples/testee_server/: SConscript  testee_server.cpp
src/websocketpp/examples/utility_client/: CMakeLists.txt  SConscript  utility_client.cpp
src/websocketpp/test/connection/: SConscript  connection.cpp  connection_tu2.cpp  connection_tu2.hpp
src/websocketpp/websocketpp/: client.hpp  close.hpp  connection.hpp  connection_base.hpp  endpoint.hpp  endpoint_base.hpp  error.hpp  error_container.hpp  frame.hpp  server.hpp  uri.hpp  utf8_validator.hpp  utilities.hpp  version.hpp
(+2511 files in other folders)
